fix sub-menu overlap

--- a/src/popouts/guildPopout.scss
+++ b/src/popouts/guildPopout.scss
@@ -25,3 +25,6 @@
 		}
 	}
 }
+
+// Right click submenu
+.submenu-2-ysNh {left: 2px;}
